# trackerbot

./: Cargo.toml  README.md
migrations/: 20231209185231_guild_settings.sql  20231229211851_bookmark.sql  20240101190131_trackerbot.sql
src/: admin.rs  bookmark.rs  clan.rs  data.rs  lib.rs  main.rs  player.rs  server.rs
