[package]
name = "trackerbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = "0.5.7"
reqwest = "0.11.22"
tokio = { version = "1.29.1", features = ["full"] }
serde_json = "1"
chrono = "0.4.31"
dns-lookup = "2.0.4"
