[package]
name = "trackerbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = "0.6.1"
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1"
chrono = "0.4"
dns-lookup = "2.0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql"] }
serde = "1"
